-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
None
-
-
cf8ade9fd809e62cb61bb897b3789c75a48f5996 (qt/qtconnectivity/dev) 704aafa5746e6008d1c268a41d08d405c7cfd15d (qt/qtconnectivity/6.2) 4af45b1256b92880c1a7d04d16d732eef1bee2b9 (qt/tqtc-qtconnectivity/5.15)
IOBluetoothDeviceInquiry never ends, despite us setting inquiry's length to 15 s. This was found as soon as a real mac (arm 64 machines) were added into CI system and tests were running. I was able to reproduce the problem with macOS 12 Beta 4 and macOS 10.15.7. It's possible it's a bug in IOBluetooth and they either really never stop (on macOS 12 I can see devices discovered even after those 15 s.) or they don't call our delegate. Anyway, we need a solution similar to what we have for CoreBluetooth device discovery.
Self-correction: on 10.15.7 it works properly, as soon as a proper entitlement ('Bluetooth') provided for an app. For macOS 12, Beta 8 - I still have this problem with scan ending far beyond the requested inquiry length (like 2 minutes instead of 15 seconds and they keep reporting devices even after inquiry is finished, so the timer is still needed).
For Gerrit Dashboard: QTBUG-95960 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
367668,6 | IOBluetoothDeviceInquiry: manually interrupt Classic scan | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |
369474,2 | IOBluetoothDeviceInquiry: manually interrupt Classic scan | 6.2 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
369478,3 | IOBluetoothDeviceInquiry: manually interrupt Classic scan | tqtc/lts-5.15 | qt/tqtc-qtconnectivity | Status: MERGED | +2 | 0 |