IOBluetoothDeviceInquiry: manually interrupt Classic scan

If 'inquiryLength' was ignored. This change is to be revisited
after the official release of macOS 12 - it could be a bug in beta
versions and all this additional timer machinery is a waste.
The fact I was able to observe the same problem with 10.15.7
is quite troublesome though.

Fixes: QTBUG-95960
Task-number: QTBUG-95686
Change-Id: I56685e07791dd751aec81bebbeefde19d31555df
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
(cherry picked from commit cf8ade9fd809e62cb61bb897b3789c75a48f5996)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>